# fractol

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile
include/: cl_data.h  cl_funs.h  draw.h  error.h  fractol.h  hook.h  image.h  keyboard.h  mouse.h  palette.h  utils.h
libmlx/: Makefile
src/: cl_init.c  cl_release.c  cl_run.c  fractol.c  hook.c  kernel.cl  keyboard.c  keyboard_utils.c  mouse.c  mouse_utils.c  palette.c  utils.c
